message(STATUS "Build demos:")

if(BULLET AND TARGET bulletSim)
    add_subdirectory(bulletSim)
else()
    message(STATUS "  Cannot find bulletSim. Stop build bulletSim demos")
endif()

if(ODE AND TARGET odeSim)
    add_subdirectory(odeSim)
else()
    message(STATUS "  Cannot find odeSim. Stop build odeSim demos")
endif()

if(MUJOCO AND TARGET mujocoSim)
    add_subdirectory(mujocoSim)
else()
    message(STATUS "  Cannot find mujocoSim. Stop build mujocoSim demos")
endif()

if(DART AND TARGET dartSim)
    add_subdirectory(dartSim)
else()
    message(STATUS "  Cannot find dartSim. Stop build dartSim demos")
endif()

if(RAISIM AND TARGET raiSim)
    add_subdirectory(raiSim)
else()
    message(STATUS "  Cannot find dartSim. Stop build dartSim demos")
endif()